--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   ],
   "manifest_version": 2,
   "icons": { 
-    "1000": "logo_128.png",
-    "128": "logo_128.png"
+    "1000": "imgs/logo_1000.png",
+    "128": "imgs/logo_128.png"
   }
 }
